docs/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: 22012-job-queue-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: registry-credential
      containers:
        - name: frontend
          image: container.cs.vt.edu/timwilson/job-queue-manager-images/frontend:prod_latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: 22012-job-queue-manager
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
      name: frontend
