docs/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: 22012-job-queue-manager
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0,::/0"
spec:
  rules:
    - host: webcatmaxxers.discovery.cs.vt.edu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3333
